fix: fix bug layout shift for product page

--- a/hofmann-landing/src/styles/layout/header.css
+++ b/hofmann-landing/src/styles/layout/header.css
@@ -54,6 +54,7 @@
   font-size: var(--font-size-sm);
   font-family: var(--font-family-secondary-regular);
   padding: 20px 15px;
+  text-transform: uppercase;
 }
 
 .hofmann-navbar-nav {
